device_read_wifi.sdk/.metadata/.plugins/org.eclipse.cdt.ui/test2.build.log
07:28:03 **** Incremental Build of configuration Debug for project test2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../test2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c:61:0: warning: "UART_DEVICE_ID" redefined
 #define UART_DEVICE_ID XPAR_UARTLITE_0_DEVICE_ID
 
In file included from ../src/platform.h:36:0,
                 from ../src/helloworld.c:49:
../src/platform_config.h:5:0: note: this is the location of the previous definition
 #define UART_DEVICE_ID 0
 
../src/helloworld.c: In function 'init':
../src/helloworld.c:129:11: error: too few arguments to function 'int_init'
  status = int_init(INT_DEVICE_ID);
           ^~~~~~~~
../src/helloworld.c:72:5: note: declared here
 int int_init(u16 device_id, XUartLite *uartliteInstancePtr);
     ^~~~~~~~
../src/helloworld.c:127:6: warning: variable 'status' set but not used [-Wunused-but-set-variable]
  int status;
      ^~~~~~
../src/helloworld.c: At top level:
../src/helloworld.c:132:5: error: conflicting types for 'int_init'
 int int_init(u16 device_id)
     ^~~~~~~~
../src/helloworld.c:72:5: note: previous declaration of 'int_init' was here
 int int_init(u16 device_id, XUartLite *uartliteInstancePtr);
     ^~~~~~~~
make: *** [src/subdir.mk:35: src/helloworld.o] Error 1

07:28:04 Build Finished (took 965ms)

